...
                android:layout_height="wrap_content"
                android:background="@drawable/ic_clear_white"
                android:layout_marginEnd="8dp"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/toolbar_add_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_plus_white"
                android:layout_marginEnd="8dp"
                android:visibility="gone"/>

...
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                android:scaleX="1.5"
                android:scaleY="1.5"/>

            <ImageButton
                android:id="@+id/toolbar_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_checkmark_white"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                android:scaleX="1.5"
...
