<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hour_string"
                android:gravity="center_horizontal"/>
            <Spinner
                android:id="@+id/create_timer_hour_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/minute_string"
                android:gravity="center_horizontal"/>
            <Spinner
                android:id="@+id/create_timer_minute_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/second_string"
                android:gravity="center_horizontal"/>
            <Spinner
                android:id="@+id/create_timer_second_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActiveProfiles"
        android:layout_margin="12dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/create_timer_profile_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"/>

</LinearLayout>
